<resources>
    <string name="app_name">Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Clear">CLR</string>
    <string-array name="currency" id="1">
        <item>BLR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>CNY</item>
        <item>GBP</item>
        <item>CAD</item>
    </string-array>
    <string-array name="distance" id="2">
        <item>m</item>
        <item>km</item>
        <item>cm</item>
        <item>dm</item>
        <item>mi</item>
        <item>yd</item>
        <item>ft</item>
    </string-array>
    <string-array name="weight" id="3">
        <item>kg</item>
        <item>gr</item>
        <item>t</item>
        <item>q</item>
        <item>lb</item>
        <item>st</item>
    </string-array>
</resources>