<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:windowSoftInputMode="stateHidden"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="363dp"
            android:layout_height="200dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

                <Spinner
                    android:id="@+id/sInputFrom"
                    android:layout_width="369dp"
                    android:layout_height="55dp"
                    android:background="@color/menu"
                    app:layout_constraintBottom_toBottomOf="@+id/etInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.009" />

                <EditText
                    android:id="@+id/etInput"
                    android:layout_width="359dp"
                    android:layout_height="53dp"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.442" />

                <Button
                    android:id="@+id/btnCopy1"
                    android:layout_width="47dp"
                    android:layout_height="34dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/btnPaste1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.722" />

                <Button
                    android:id="@+id/btnPaste1"
                    android:layout_width="47dp"
                    android:layout_height="34dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_baseline_input_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/etInput"
                    app:layout_constraintHorizontal_bias="0.839"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.716" />

                <Button
                    android:id="@+id/btnSwap1"
                    android:layout_width="47dp"
                    android:layout_height="34dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_swap"
                    android:onClick="onSwap"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/etInput"
                    app:layout_constraintVertical_bias="0.613" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="363dp"
            android:layout_height="200dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">


                <Spinner
                    android:id="@+id/sInputTo"
                    android:layout_width="366dp"
                    android:layout_height="63dp"
                    android:background="@color/menu"
                    app:layout_constraintBottom_toBottomOf="@+id/etOutput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/etOutput"
                    android:layout_width="365dp"
                    android:layout_height="59dp"
                    android:inputType="textPersonName"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.409" />

                <Button
                    android:id="@+id/btnCopy"
                    android:layout_width="47dp"
                    android:layout_height="34dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/btnPaste"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.722" />

                <Button
                    android:id="@+id/btnPaste"
                    android:layout_width="47dp"
                    android:layout_height="34dp"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ic_baseline_input_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/etOutput"
                    app:layout_constraintHorizontal_bias="0.839"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.716" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="360dp"
            android:layout_height="252dp"
            app:cardBackgroundColor="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnOne"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/btnTwo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_2" />

                    <Button
                        android:id="@+id/btnThree"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnFour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_4" />

                    <Button
                        android:id="@+id/btnFive"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_5" />

                    <Button
                        android:id="@+id/btnSix"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSeven"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_7" />

                    <Button
                        android:id="@+id/btnEight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_8" />

                    <Button
                        android:id="@+id/btnNine"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnZero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onDigit"
                        android:text="@string/_0" />

                    <Button
                        android:id="@+id/btnPoint"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.5"
                        android:onClick="onDot"
                        android:text="@string/Dot" />

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="onClear"
                        android:text="@string/Clear" />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/ic_backspace"
                        android:onClick="onDelete" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnNightMode"
            android:layout_width="52dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/ic_night"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <Button
            android:id="@+id/btnAdditionalMode"
            android:layout_width="52dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/ic_baseline_payments_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.631" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="50dp"></FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />
</RelativeLayout>